# leaf

leaf/: Cargo.toml  build.rs
leaf-ffi/: Cargo.toml
leaf-ffi/src/: lib.rs
leaf/src/: lib.rs  util.rs
leaf/src/app/: dispatcher.rs  dns_client.rs  doh_client.rs  healthcheck.rs  mod.rs
leaf/src/app/inbound/: manager.rs
leaf/src/app/outbound/: selector.rs
leaf/src/config/: common.rs  external_rule.rs
leaf/src/mobile/: bindings.rs  logger.rs  wrapper.h
leaf/src/proxy/: mod.rs
leaf/src/proxy/mixed/: mod.rs
leaf/src/proxy/mixed/inbound/: stream.rs
leaf/src/proxy/select/: datagram.rs  stream.rs
leaf/src/proxy/tun/: inbound.rs
scripts/: build_apple_xcframework.sh
