[package]
name = "leaf-ffi"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib", "dylib"]

[features]
default = [
    "default-ring",
    "outbound-select",
]

default-aws-lc= [
    "leaf/default-aws-lc",
]

default-ring = [
    "leaf/default-ring",
]

default-openssl = [
    "leaf/default-openssl",
]

auto-reload = ["leaf/auto-reload"]
outbound-select = ["leaf/outbound-select"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
